package com.mycompany.tema38;

public class HorasMotorException extends Exception{

    public HorasMotorException() {
        super();
    }
    public HorasMotorException(String msg) {
        super(msg);
    }
}
