
package com.mycompany.tema38;

public class IdDuplicadoException extends Exception{
    public IdDuplicadoException(String msg) {
        super(msg);
    }
}
