package com.mycompany.tema38;

public class RutNoValidoException extends Exception{

    public RutNoValidoException() {
        super();
    }
    public RutNoValidoException(String msg) {
        super(msg);
    }
}
