package com.mycompany.tema38;

public class SucursalNoEncontradaException extends Exception{
    public SucursalNoEncontradaException() {
    }
    public SucursalNoEncontradaException(String msg) {
        super(msg);
    }
}
