package com.mycompany.tema38;

public class Tema38 {
    public static void main(String[] args) {
        SistemaArrendamiento.getInstance().iniciar();
    } 
}
